# rust-custom-derive

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  update-docs.py
.cargo/: config
doc/: search-index.js
doc-pkg/: Cargo.toml
doc/custom_derive/: index.html
doc/enum_derive/: index.html  macro.EnumDisplay!.html  macro.EnumFromInner!.html  macro.EnumFromStr!.html  macro.EnumInnerAsTrait!.html  macro.IterVariantNames!.html  macro.IterVariants!.html  macro.NextVariant!.html  macro.PrevVariant!.html  sidebar-items.js  struct.ParseEnumError.html
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/std/error/: trait.Error.js
doc/newtype_derive/: index.html  macro.NewtypeAdd!.html  macro.NewtypeAddAssign!.html  macro.NewtypeBinary!.html  macro.NewtypeBitAnd!.html  macro.NewtypeBitAndAssign!.html  macro.NewtypeBitOr!.html  macro.NewtypeBitOrAssign!.html  macro.NewtypeBitXor!.html  macro.NewtypeBitXorAssign!.html  macro.NewtypeDebug!.html  macro.NewtypeDeref!.html  macro.NewtypeDerefMut!.html  macro.NewtypeDisplay!.html  macro.NewtypeDiv!.html  macro.NewtypeDivAssign!.html  macro.NewtypeFrom!.html  macro.NewtypeIndex!.html  macro.NewtypeIndexMut!.html  macro.NewtypeLowerExp!.html  macro.NewtypeLowerHex!.html  macro.NewtypeMul!.html  macro.NewtypeMulAssign!.html  macro.NewtypeNeg!.html  macro.NewtypeNot!.html  macro.NewtypeOctal!.html  macro.NewtypePointer!.html  macro.NewtypeRem!.html  macro.NewtypeRemAssign!.html  macro.NewtypeShl!.html  macro.NewtypeShlAssign!.html  macro.NewtypeShr!.html  macro.NewtypeShrAssign!.html  macro.NewtypeSub!.html  macro.NewtypeSubAssign!.html  macro.NewtypeUpperExp!.html  macro.NewtypeUpperHex!.html  sidebar-items.js
doc/src/custom_derive/: lib.rs.html
doc/src/enum_derive/: lib.rs.html
doc/src/newtype_derive/: lib.rs.html
enum_derive/: Cargo.toml
enum_derive/src/: common.rs  fmt.rs  from_str.rs  inner.rs  iter_variants.rs  lib.rs  step_variants.rs  tag.rs
enum_derive/tests/: display.rs  enum_from_inner.rs  enum_inner_as_trait.rs  fmt.rs  fromstr.rs  iter.rs  next-prev.rs
newtype_derive/: Cargo.toml  build.rs
newtype_derive/src/: arith_bin.rs  arith_una.rs  common.rs  fmt.rs  forward.rs  iter.rs  lib.rs  std_unstable.rs
newtype_derive/tests/: arith.rs  arith_assign.rs  deref_index.rs  fmt.rs  issue-5-pub-interior-field.rs  iter.rs  star_forms.rs  std_unstable.rs
scripts/: update-docs.py
src/: derives.rs  guide.rs  lib.rs
struct_derive/: Cargo.toml
struct_derive/src/: common.rs  lib.rs  type_index.rs
tests/: empty_bi_derives.rs  enum_iterator.rs  enum_try_from.rs  items.rs  mac_attrs.rs  passthru_derive.rs  stable_encodable.rs  trailing_comma.rs
tests/derive-name-macro/: Cargo.toml  derive-name-macro.rs
tests/derive-name-proc/: Cargo.toml  derive-name-proc.rs
tests/derive-name-test/: Cargo.toml  derive-name-test.rs
