[package]
name = "macro-attr"
version = "0.2.1"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "This crate provides the `macro_attr!` macro that enables the use of custom, macro-based attributes and derivations.  Supercedes the `custom_derive` crate."
repository = "https://github.com/DanielKeep/rust-custom-derive"
documentation = "https://docs.rs/crate/macro-attr/"
license = "MIT/Apache-2.0"
keywords = ["custom", "derive", "attribute", "macro"]

build = "build.rs"

exclude = [
    ".cargo/*",
    "local/*",
    "doc-pkg/*",
    "scripts/*",
    ".gitmodules",
    ".travis.yml",
    "update-docs.py",
]

[workspace]
members = [
    "enum_derive",
    "newtype_derive",
    "struct_derive",
    "tests/derive-name-macro",
    "tests/derive-name-proc",
    "tests/derive-name-test",
]

[features]
default = ["std"]
std = []
use-proc-macros = []

[build-dependencies]
rustc_version = "0.1.4"

[dev-dependencies]
rustc-serialize = "0.3.15"
