[package]
name = "enum_derive"
version = "0.1.2"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "This crate provides macros for deriving additional functionality for enums."
repository = "https://github.com/DanielKeep/rust-custom-derive"
documentation = "https://danielkeep.github.io/rust-custom-derive/doc/enum_derive/index.html"
license = "MIT"
keywords = ["enum", "derive", "custom_derive", "macro"]

[dev-dependencies]
custom_derive = "0.1.1"
