[package]
name = "enum_derive"
version = "0.1.8"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "This crate provides macros for deriving additional functionality for enums."
repository = "https://github.com/DanielKeep/rust-custom-derive"
documentation = "https://docs.rs/crate/enum_derive/"
license = "MIT/Apache-2.0"
keywords = ["enum", "derive", "custom_derive", "macro", "macro-attr"]

[features]
default = ["std"]
std = []

[dev-dependencies]
macro-attr = { version = "0.2.1", path = ".." }
