[package]
name = "newtype_derive"
version = "0.1.5"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "This crate provides macros for deriving common traits for newtype structures."
repository = "https://github.com/DanielKeep/rust-custom-derive"
documentation = "https://danielkeep.github.io/rust-custom-derive/doc/newtype_derive/index.html"
license = "MIT/Apache-2.0"
keywords = ["newtype", "derive", "wrapper", "custom_derive", "macro"]

[features]
std-unstable = []
no_std = []

[dev-dependencies]
custom_derive = "0.1.1"
