[package]
name = "derive-name-test"
version = "0.1.0"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

[features]
std = ["macro-attr/std"]
unstable-macros-1-1 = ["macro-attr/unstable-macros-1-1", "derive-name-proc"]

[[bin]]
name = "derive-name-test"
path = "derive-name-test.rs"

[dependencies]
derive-name-macro = { version = "0.1.0", path = "../derive-name-macro" }
derive-name-proc = { version = "0.1.0", path = "../derive-name-proc", optional = true }

[dependencies.macro-attr]
version = "0.2.1"
path = "../.."
default-features = false
